Fixed small header overlapping

--- a/app/assets/stylesheets/styleguide.sass
+++ b/app/assets/stylesheets/styleguide.sass
@@ -143,6 +143,7 @@ body.sg-full
     color: #888
     font-weight: 200
     line-height: 1.2
+    text-align: right
 
     margin-bottom: 0px
     padding-bottom: 30px
